# wys-alsa

./: .gitlab-ci.yml  README.md  meson.build  wys-connect  wys.doap
debian/: .gitignore  changelog  control  copyright  rules  wys-alsa.install  wys-alsa.user-service  wys.init  wys.install  wys.user-service
machine-conf/Purism Librem 5/: codec  modem
machine-conf/Purism Librem 5 devkit/: codec  modem
src/: main.c  meson.build  util.c  util.h  wys-audio.c  wys-audio.h  wys-direction.c  wys-direction.h  wys-modem.c  wys-modem.h
subprojects/libmachine-check/: mchk-machine-check.c  mchk-machine-check.h  meson.build
